--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@
           <p>TASARIM</p>
         </div>
         <div class="top-box top-box-a">
-          <img src="/images/plane.png" alt="" />
+          <img src="images/plane.png" alt="" />
           <p>Teleskopik (iç içe girebilen) robot kol tasarımı</p>
         </div>
         <div class="top-box top-box-b">
-          <img src="/images/heart.png" alt="" />
+          <img src="images/heart.png" alt="" />
           <p>
             Muadillerine göre boyutsal olarak %40 daha küçük robot tasarımı
           </p>
         </div>
         <div class="top-box top-box-c">
-          <img src="/images/hand.png" alt="" />
+          <img src="images/hand.png" alt="" />
           <p>Makine parkurunda artmış alan verimliliği</p>
         </div>
         <div class="top-box empty-one"></div>
         <div class="top-box top-box-d">
-          <img src="/images/gear.png" alt="" />
+          <img src="images/gear.png" alt="" />
           <p>Muadillerine göre 2 kat fazla çalışma hızı</p>
         </div>
         <div class="top-box empty-two"></div>
@@ -102,7 +102,7 @@
       <div class="empty-place"></div>
       <footer class="footer">
         <div class="location">
-          <img src="/images/location.png" alt="" />
+          <img src="images/location.png" alt="" />
           <p>
             Çifte Havuzlar Mahallesi, YTU Davutpaşa Kampüsü <br />
             Teknopark D2 Blok Kuluçka Merkezi, <br />
@@ -110,11 +110,11 @@
           </p>
         </div>
         <div class="mail">
-          <img src="/images/mail.png" alt="" />
+          <img src="images/mail.png" alt="" />
           <p>info@robomec.com</p>
         </div>
         <div class="phone">
-          <img src="/images/phone.png" alt="" />
+          <img src="images/phone.png" alt="" />
           <p>
             0507 955 12 64 <br />
             0537 860 99 88
