--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
           <p>Teleskopik (iç içe girebilen) robot kol tasarımı</p>
         </div>
         <div class="top-box top-box-b">
-          <img src="/images/heart.png" alt="" />
+          <img
+            src="https://hasancankose.github.io/robomec/images/heart.png"
+            alt=""
+          />
           <p>
             Muadillerine göre boyutsal olarak %40 daha küçük robot tasarımı
           </p>
