--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <p>TASARIM</p>
         </div>
         <div class="top-box top-box-a">
-          <img src="/images/plane.png" alt="" />
+          <img src="../images/plane.png" alt="" />
           <p>Teleskopik (iç içe girebilen) robot kol tasarımı</p>
         </div>
         <div class="top-box top-box-b">
