--- a/index.html
+++ b/index.html
@@ -79,20 +79,17 @@
           <p>TASARIM</p>
         </div>
         <div class="top-box top-box-a">
-          <img src="images/plane.png" alt="" />
+          <img src="./images/plane.png" alt="" />
           <p>Teleskopik (iç içe girebilen) robot kol tasarımı</p>
         </div>
         <div class="top-box top-box-b">
-          <img
-            src="https://hasancankose.github.io/robomec/images/heart.png"
-            alt=""
-          />
+          <img src="./images/heart.png" alt="" />
           <p>
             Muadillerine göre boyutsal olarak %40 daha küçük robot tasarımı
           </p>
         </div>
         <div class="top-box top-box-c">
-          <img src="/images/hand.png" alt="" />
+          <img src="./images/hand.png" alt="" />
           <p>Makine parkurunda artmış alan verimliliği</p>
         </div>
         <div class="top-box empty-one"></div>
