--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css?family=Solway&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Ana Sayfa</title>
   </head>
   <body>
     <div class="wrapper">
@@ -49,10 +49,7 @@
         </ul>
       </nav>
       <section class="top-container">
-        <header class="showcase">
-          <h1>ROBOMEC</h1>
-          <p>Robotlu Otomaston Sistemleri</p>
-        </header>
+        <header class="showcase"></header>
       </section>
       <section class="info">
         <div class="info-img"></div>
