--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     <div class="wrapper">
       <nav id="navbar" class="main-nav">
         <ul>
-          <li class="logo"><a href="#">LOGOLOGOLOGO</a></li>
+          <li class="logo">
+            <a id="mainlogo" href="#"
+              ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt=""
+            /></a>
+          </li>
           <li>
             <a href="#">Ana Sayfa</a>
           </li>
