--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             /></a>
           </li>
           <li>
-            <a href="#">Ana Sayfa</a>
+            <a href="index.html">Ana Sayfa</a>
           </li>
           <li>
             <a href="about.html">Hakkımızda</a>
@@ -117,7 +117,7 @@
         <div class="phone">
           <img src="./images/phone.png" alt="" />
           <p>
-            +905079551264 <br />
+            +90 507 955 12 64 <br />
             +90 537 860 99 88
           </p>
         </div>
