--- a/contact.html
+++ b/contact.html
@@ -59,33 +59,14 @@
       <section class="contact">
         <div class="left-contact"></div>
         <div class="mid-contact">
-          <!-- <div id="map"></div> -->
           <iframe
             style="border: 0;"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3010.285770600225!2d28.888648515414467!3d41.01900347929964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x154c26ef568651a8!2sRobomec+Makine+Otomasyon!5e0!3m2!1sen!2str!4v1531680244764"
-            width="100%"
+            width=100%"
             height="450"
             frameborder="0"
             allowfullscreen="allowfullscreen"
           ></iframe>
-          <!-- <script>
-            function initMap() {
-              var location = { lat: 41.019046, lng: 28.890747 };
-              var map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 15,
-                center: location
-              });
-              var marker = new google.maps.Marker({
-                position: location,
-                map: map
-              });
-            }
-          </script>
-          <script
-            async
-            defer
-            src="https://maps.googleapis.com/maps/api/js?client=google-maps-embed&paint_origin=&libraries=geometry,search&v=3.exp&language=tr_TR&region=tr&callback=initMap"
-          ></script> -->
         </div>
         <div class="right-contact"></div>
       </section>
