--- a/about.html
+++ b/about.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="Robomec Makine Otomasyon San. Tic. Ltd. Şti. firmasının kurumsal web sitesidir. Robomec Plastik sektöründe robotlu otomasyon hizmetleri vermektedir."
+    />
+    <meta
+      name="keywords"
+      content="Robomec, Robomec Makine, Kalıp İçi Etiketleme Robotu, Yandan Giriş IML Robot, Üstten Giriş IML Robot, Enjeksiyon Kalıp İçi Etiketleme, Şişirme Kalıp İçi Etiketleme, Ürün Alma Robotu IML, IML Robot, BML, BML Robot, In Mold Labeling, In Mold Labeling for Blow Molding, Blow Molding Labeling, Side Entry IML Robot, Top Entry IML Robot, Take Out Robot"
+    />
     <link rel="stylesheet" href="styles/style.css" />
     <link
       rel="stylesheet"
@@ -13,7 +21,7 @@
       href="https://fonts.googleapis.com/css?family=Solway&display=swap"
       rel="stylesheet"
     />
-    <title>Hakkımızda</title>
+    <title>Hakkımızda | Robomec</title>
   </head>
 
   <body>
@@ -32,7 +40,7 @@
             <a href="about.html">Hakkımızda</a>
           </li>
           <li>
-            <a href="#">Ürünler</a>
+            <a href="product.html">Ürünler</a>
           </li>
           <li>
             <a href="contact.html">İletişim</a>
@@ -63,16 +71,19 @@
             <h1>ROBOMEC</h1>
             <br />
             <p>
-              ROBOMEC; sektörün farklı alt dallarında 10 yılı bulan tecrübe ve
+              ROBOMEC, sektörün farklı alt dallarında 10 yılı bulan tecrübe ve
               bilgi birikimine sahip ekibimizin, 2017 yılında bir araya gelmesi
-              ile teknopark bünyesinde kurulmuştur. Plastik ambalaj imalatı
-              sektörüne robotlu otomasyon hizmeti verme misyonuyla yola çıkan
-              firmamız, “From Raw Material To Final Product” sloganıyla plastik
-              enjeksiyon, şişirme, injection&blow ve termoform makineleri ile
-              entegre çalışan; Kalıp İçi Etiketleme (IML-BML), Ürün Alma (Take
-              Out), Çapak Kırma, Kulp Çakma, Sağlam-Sakat Testi, Kamera Kontrol,
-              Paketleme-Paletleme gibi müşteriye özel robotik sistemler
-              kurmaktadır.
+              ile teknopark bünyesinde kurulmuştur.
+            </p>
+            <br />
+            <p>
+              Plastik ambalaj imalatı sektörüne robotlu otomasyon hizmeti verme
+              misyonuyla yola çıkan firmamız, “From Raw Material To Final
+              Product” sloganıyla plastik enjeksiyon, şişirme, injection&blow ve
+              termoform makineleri ile entegre çalışan; Kalıp İçi Etiketleme
+              (IML-BML), Ürün Alma (Take Out), Çapak Kırma, Kulp Çakma,
+              Sağlam-Sakat Testi, Kamera Kontrol, Paketleme-Paletleme gibi
+              müşteriye özel robotik sistemler kurmaktadır.
             </p>
             <br />
             <p>
