--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description"
+      content="Robomec Makine Otomasyon San. Tic. Ltd. Şti. firmasının kurumsal web sitesidir. Robomec Plastik sektöründe robotlu otomasyon hizmetleri vermektedir." />
+    <meta name="keywords"
+      content="Robomec, Robomec Makine, Kalıp İçi Etiketleme Robotu, Yandan Giriş IML Robot, Üstten Giriş IML Robot, Enjeksiyon Kalıp İçi Etiketleme, Şişirme Kalıp İçi Etiketleme, Ürün Alma Robotu IML, IML Robot, BML, BML Robot, In Mold Labeling, In Mold Labeling for Blow Molding, Blow Molding Labeling, Side Entry IML Robot, Top Entry IML Robot, Take Out Robot" />
     <link rel="stylesheet" href="styles/style.css" />
     <link
       rel="stylesheet"
@@ -13,7 +17,7 @@
       href="https://fonts.googleapis.com/css?family=Solway&display=swap"
       rel="stylesheet"
     />
-    <title>Hakkımızda</title>
+    <title>İletişim | Robomec</title>
   </head>
 
   <body>
@@ -32,7 +36,7 @@
             <a href="about.html">Hakkımızda</a>
           </li>
           <li>
-            <a href="#">Ürünler</a>
+            <a href="product.html">Ürünler</a>
           </li>
           <li>
             <a href="contact.html">İletişim</a>
@@ -59,6 +63,24 @@
       <section class="contact">
         <div class="left-contact"></div>
         <div class="mid-contact">
+          <div class="contact-info">
+            <div class="contact-adress">
+              <h3>Adres</h3>
+              <p>Çifte Havuzlar Mahallesi, YTU Davutpaşa Kampüsü
+              Teknopark D2 Blok Kuluçka Merkezi,
+              34220 Esenler/İstanbul</p>
+            </div>
+            <div class="contact-mail">
+              <h3>E-Mail</h3>
+              <p>info@robomec.com</p>
+            </div>
+            <div class="contact-phone">
+              <h3>Telefon</h3>
+              <p>+90 507 955 12 64 – +90 537 860 99 88</p>
+            </div>
+          </div>
+          <br>
+          <br>
           <iframe
             style="border: 0;"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3010.285770600225!2d28.888648515414467!3d41.01900347929964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x154c26ef568651a8!2sRobomec+Makine+Otomasyon!5e0!3m2!1sen!2str!4v1531680244764"
