--- a/product.html
+++ b/product.html
@@ -21,8 +21,9 @@
       href="https://fonts.googleapis.com/css?family=Solway&display=swap"
       rel="stylesheet"
     />
-    <title>Robomec Makine Otomasyon Kurumsal Web Sitesi</title>
+    <title>Hakkımızda | Robomec</title>
   </head>
+
   <body>
     <div class="wrapper">
       <nav id="navbar" class="main-nav">
@@ -63,52 +64,21 @@
       <section class="top-container">
         <header class="showcase"></header>
       </section>
-      <section class="info">
-        <div class="info-img"></div>
-        <div>
-          <h1>ROBOMEC</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, quia!
-            Quisquam facilis sit at, in, sed reprehenderit corrupti eum
-            voluptate vel minus minima nam officiis possimus hic deleniti
-            aliquam! Quo saepe nisi laudantium voluptatibus doloremque inventore
-            hic recusandae quia est vitae dicta earum possimus minus quibusdam,
-            ipsum, dolorum provident adipisci laborum, cum sit voluptatem.
-            Impedit, quos repellendus nihil deleniti iste vitae ea a cumque
-            consequuntur quasi, excepturi magni exercitationem sit accusamus.
-            Aliquam ipsum nemo corrupti voluptatibus eaque illum possimus
-            perferendis, natus voluptatem deleniti cum laboriosam, dolores
-            culpa! Harum ut quae numquam voluptate hic esse, doloremque sapiente
-            necessitatibus fugiat nobis non.
-          </p>
+      <section class="product">
+        <div class="product-left"></div>
+        <div class="product-mid">
+          <iframe
+            width="100%"
+            height="500"
+            src="https://www.youtube.com/embed/hFL888HKeqs"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
+        <div class="product-right"></div>
       </section>
-      <section class="boxes">
-        <div class="top-box design">
-          <p>TASARIM</p>
-        </div>
-        <div class="top-box top-box-a">
-          <img src="./images/plane.png" alt="" />
-          <p>Teleskopik (iç içe girebilen) robot kol tasarımı</p>
-        </div>
-        <div class="top-box top-box-b">
-          <img src="./images/heart.png" alt="" />
-          <p>
-            Muadillerine göre boyutsal olarak %40 daha küçük robot tasarımı
-          </p>
-        </div>
-        <div class="top-box top-box-c">
-          <img src="./images/hand.png" alt="" />
-          <p>Makine parkurunda artmış alan verimliliği</p>
-        </div>
-        <div class="top-box empty-one"></div>
-        <div class="top-box top-box-d">
-          <img src="./images/gear.png" alt="" />
-          <p>Muadillerine göre 2 kat fazla çalışma hızı</p>
-        </div>
-        <div class="top-box empty-two"></div>
-      </section>
-      <div class="empty-place"></div>
+
       <footer class="footer">
         <div class="location">
           <img src="./images/location.png" alt="" />
