--- a/product.html
+++ b/product.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css?family=Solway&display=swap"
       rel="stylesheet"
     />
-    <title>Hakkımızda | Robomec</title>
+    <title>Ürünler | Robomec</title>
   </head>
 
   <body>
