--- a/about.html
+++ b/about.html
@@ -34,16 +34,16 @@
             /></a>
           </li>
           <li>
-            <a href="index.html">Ana Sayfa</a>
+            <a id="start" href="index.html">Ana Sayfa</a>
           </li>
           <li>
-            <a href="about.html">Hakkımızda</a>
+            <a id="start" href="about.html">Hakkımızda</a>
           </li>
           <li>
-            <a href="product.html">Ürünler</a>
+            <a id="start" href="product.html">Ürünler</a>
           </li>
           <li>
-            <a href="contact.html">İletişim</a>
+            <a id="start" href="contact.html">İletişim</a>
           </li>
           <li class="icons">
             <a href="https://www.facebook.com/" class="face" target="_blank"
@@ -64,7 +64,7 @@
       <section class="top-container">
         <header class="showcase"></header>
       </section>
-      <section class="about">
+      <section id="end" class="about">
         <div class="left"></div>
         <div class="mid">
           <div class="aboutcontent">
@@ -166,5 +166,6 @@
         </div>
       </footer>
     </div>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
