--- a/contact.html
+++ b/contact.html
@@ -30,16 +30,16 @@
             /></a>
           </li>
           <li>
-            <a href="index.html">Ana Sayfa</a>
+            <a id="start" href="index.html">Ana Sayfa</a>
           </li>
           <li>
-            <a href="about.html">Hakkımızda</a>
+            <a id="start" href="about.html">Hakkımızda</a>
           </li>
           <li>
-            <a href="product.html">Ürünler</a>
+            <a id="start" href="product.html">Ürünler</a>
           </li>
           <li>
-            <a href="contact.html">İletişim</a>
+            <a id="start" href="contact.html">İletişim</a>
           </li>
           <li class="icons">
             <a href="https://www.facebook.com/" class="face" target="_blank"
@@ -60,7 +60,7 @@
       <section class="top-container">
         <header class="showcase"></header>
       </section>
-      <section class="contact">
+      <section id='end' class="contact">
         <div class="left-contact"></div>
         <div class="mid-contact">
           <div class="contact-info">
@@ -134,5 +134,6 @@
         </div>
       </footer>
     </div>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
