--- a/product.html
+++ b/product.html
@@ -34,16 +34,16 @@
             /></a>
           </li>
           <li>
-            <a href="index.html">Ana Sayfa</a>
+            <a id="start" href="index.html">Ana Sayfa</a>
           </li>
           <li>
-            <a href="about.html">Hakkımızda</a>
+            <a id="start" href="about.html">Hakkımızda</a>
           </li>
           <li>
-            <a href="product.html">Ürünler</a>
+            <a id="start" href="product.html">Ürünler</a>
           </li>
           <li>
-            <a href="contact.html">İletişim</a>
+            <a id="start" href="contact.html">İletişim</a>
           </li>
           <li class="icons">
             <a href="https://www.facebook.com/" class="face" target="_blank"
@@ -66,7 +66,7 @@
       </section>
       <section class="product">
         <div class="product-left"></div>
-        <div class="product-mid">
+        <div id="end" class="product-mid">
           <iframe
             width="100%"
             height="500"
@@ -120,5 +120,6 @@
         </div>
       </footer>
     </div>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
