--- a/about.html
+++ b/about.html
@@ -34,16 +34,16 @@
             /></a>
           </li>
           <li>
-            <a id="start" href="index.html">Ana Sayfa</a>
+            <a class="start" href="index.html">Ana Sayfa</a>
           </li>
           <li>
-            <a id="start" href="about.html">Hakkımızda</a>
+            <a class="start" href="about.html">Hakkımızda</a>
           </li>
           <li>
-            <a id="start" href="product.html">Ürünler</a>
+            <a class="start" href="product.html">Ürünler</a>
           </li>
           <li>
-            <a id="start" href="contact.html">İletişim</a>
+            <a class="start" href="contact.html">İletişim</a>
           </li>
           <li class="icons">
             <a href="https://www.facebook.com/" class="face" target="_blank"
