--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       <nav id="navbar" class="main-nav">
         <ul>
           <li class="logo">
-            <a id="mainlogo" href="#"
+            <a id="mainlogo" href="index.html"
               ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt=""
             /></a>
           </li>
@@ -64,7 +64,7 @@
       <section class="top-container">
         <header class="showcase"></header>
       </section>
-      <section id="end" class="about">
+      <section class="about end">
         <div class="left"></div>
         <div class="mid">
           <div class="aboutcontent">
