--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       <nav id="navbar" class="main-nav">
         <ul>
           <li class="logo">
-            <a id="mainlogo" href="#"
+            <a id="mainlogo" href="index.html"
               ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt=""
             /></a>
           </li>
@@ -60,7 +60,7 @@
       <section class="top-container">
         <header class="showcase"></header>
       </section>
-      <section id='end' class="contact">
+      <section class="contact end">
         <div class="left-contact"></div>
         <div class="mid-contact">
           <div class="contact-info">
