--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <nav id="navbar" class="main-nav">
         <ul>
           <li class="logo">
-            <a id="mainlogo" href="#"
-              ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt=""
+            <a id="mainlogo" href="index.html"
+              ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt="logo"
             /></a>
           </li>
           <li>
