--- a/product.html
+++ b/product.html
@@ -29,7 +29,7 @@
       <nav id="navbar" class="main-nav">
         <ul>
           <li class="logo">
-            <a id="mainlogo" href="#"
+            <a id="mainlogo" href="index.html"
               ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt=""
             /></a>
           </li>
@@ -64,9 +64,9 @@
       <section class="top-container">
         <header class="showcase"></header>
       </section>
-      <section class="product">
+      <section class="product end">
         <div class="product-left"></div>
-        <div id="end" class="product-mid">
+        <div class="product-mid">
           <iframe
             width="100%"
             height="500"
