--- a/product.html
+++ b/product.html
@@ -29,21 +29,21 @@
       <nav id="navbar" class="main-nav">
         <ul>
           <li class="logo">
-            <a id="mainlogo" href="index.html"
+            <a id="mainlogo" class="start" href="index.html#start"
               ><img id="logo" src="./images/Robomec_Logo-2.JPG" alt=""
             /></a>
           </li>
           <li>
-            <a class="start" href="index.html">Ana Sayfa</a>
+            <a class="start" href="index.html#start">Ana Sayfa</a>
           </li>
           <li>
-            <a class="start" href="about.html">Hakkımızda</a>
+            <a class="start" href="about.html#start">Hakkımızda</a>
           </li>
           <li>
-            <a class="start" href="product.html">Ürünler</a>
+            <a class="start" href="product.html#start">Ürünler</a>
           </li>
           <li>
-            <a class="start" href="contact.html">İletişim</a>
+            <a class="start" href="contact.html#start">İletişim</a>
           </li>
           <li class="icons">
             <a href="https://www.facebook.com/" class="face" target="_blank"
