--- a/index.html
+++ b/index.html
@@ -150,6 +150,6 @@
         </div>
       </footer>
     </div>
-    <script src="/scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
