--- a/index.html
+++ b/index.html
@@ -68,18 +68,38 @@
         <div>
           <h1>ROBOMEC</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, quia!
-            Quisquam facilis sit at, in, sed reprehenderit corrupti eum
-            voluptate vel minus minima nam officiis possimus hic deleniti
-            aliquam! Quo saepe nisi laudantium voluptatibus doloremque inventore
-            hic recusandae quia est vitae dicta earum possimus minus quibusdam,
-            ipsum, dolorum provident adipisci laborum, cum sit voluptatem.
-            Impedit, quos repellendus nihil deleniti iste vitae ea a cumque
-            consequuntur quasi, excepturi magni exercitationem sit accusamus.
-            Aliquam ipsum nemo corrupti voluptatibus eaque illum possimus
-            perferendis, natus voluptatem deleniti cum laboriosam, dolores
-            culpa! Harum ut quae numquam voluptate hic esse, doloremque sapiente
-            necessitatibus fugiat nobis non.
+            Firmamız, uzun yıllar kalıp içi etiketleme (IML) teknolojisi üzerine
+            tecrübe edindiği kazanım ve birikimlerini plastik şişirme sektörüne
+            aktarma misyonuyla yola çıkmıştır. Bu bağlamda Türkiye’nin ilk
+            plastik şişirme IML Robot firması olmanın haklı gururu ile
+            projelerini hayata geçirmeye devam etmektedir.
+          </p>
+          <br />
+          <p>
+            IML etiketleme teknolojisi, plastik şişe ambalaj üzerinde ürünün;
+          </p>
+          <br />
+          <ul>
+            <li>
+              İmalatı esnasında yapıştırma ile etiketleme prosesinin ortadan
+              kalkması,
+            </li>
+            <li>
+              Şişe ambalajın etiketinin deformasyon ihtimalinin ortadan
+              kalkması,
+            </li>
+            <li>
+              IML etiketin hava geçirgenliğinin olmayışı ve ürün raf ömrünü
+              arttırması,
+            </li>
+            <li>
+              Üretim verimliliğini ve ürün kalitesini artırarak marka değerini
+              artırması
+            </li>
+          </ul>
+          <br />
+          <p>
+            şeklinde önemli avantajları ve üreticiye kazanımları olmaktadır.
           </p>
         </div>
       </section>
@@ -125,8 +145,7 @@
         <div class="phone">
           <img src="./images/phone.png" alt="" />
           <p>
-            +90 507 955 12 64 <br />
-            +90 537 860 99 88
+            +90 507 955 12 64
           </p>
         </div>
         <div class="footer-img">
