--- a/product.html
+++ b/product.html
@@ -64,7 +64,7 @@
       <section class="product end">
         <div class="product-left"></div>
         <div class="product-mid">
-          <h1>Tek İstasyon Şişirme IML Robot</h1>
+          <h1 class="product-title">Tek İstasyon Şişirme IML Robot</h1>
           <iframe
             width="100%"
             height="500"
@@ -73,8 +73,8 @@
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
-          <div class="horizontal"></div>
-          <h1>Çift İstasyon Şişirme IML Robot</h1>
+          <div id="horizontal"></div>
+          <h1 class="product-title">Çift İstasyon Şişirme IML Robot</h1>
           <iframe 
           width="100%"
           height="500"
