--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <title class="tr">Robomec Makine Otomasyon Kurumsal Web Sitesi</title>
     <title class="en">Robomec Machinery Automation Corporate Web Site</title>
   </head>
-  <body>
+  <body id="content-body">
     <div class="wrapper">
       <nav id="navbar" class="main-nav">
         <ul>
@@ -181,6 +181,10 @@
             <a href="#" class="insta" target="_blank"
               ><i class="fa fa-instagram"></i
             ></a>
+          </div>
+          <div class="footer-languages">
+            <p class="turkish">TR</p>
+            <p class="english">EN</p>
           </div>
         </div>
         <div class="copy-right">
