--- a/product.html
+++ b/product.html
@@ -24,7 +24,7 @@
     <title>Ürünler | Robomec</title>
   </head>
 
-  <body>
+  <body id="content-body">
     <div class="wrapper">
       <nav id="navbar" class="main-nav">
         <ul>
@@ -114,6 +114,10 @@
             <a href="#" class="insta" target="_blank"
               ><i class="fa fa-instagram"></i
             ></a>
+          </div>
+          <div class="footer-languages">
+            <p class="turkish">TR</p>
+            <p class="english">EN</p>
           </div>
         </div>
         <div class="copy-right">
