--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <title>İletişim | Robomec</title>
   </head>
 
-  <body>
+  <body id="content-body">
     <div class="wrapper">
       <nav id="navbar" class="main-nav">
         <ul>
@@ -122,6 +122,10 @@
               target="_blank"
               ><i class="fa fa-instagram"></i
             ></a>
+          </div>
+          <div class="footer-languages">
+            <p class="turkish">TR</p>
+            <p class="english">EN</p>
           </div>
         </div>
         <div class="copy-right">
